--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>ts</title>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
 	<script type="text/javascript" src="js/EnemyLand1.js"></script>
+	<script type="text/javascript" src="js/EnemyFly1.js"></script>
+	<script type="text/javascript" src="js/states/LoadingState.js"></script>
+	<script type="text/javascript" src="js/states/TitleState.js"></script>
+	<script type="text/javascript" src="js/states/GameState.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
