--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 	<title>ts</title>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
+	<script type="text/javascript" src="js/EnemyTorrent.js"></script>
+	<script type="text/javascript" src="js/EnemyFly1.js"></script>
 	<script type="text/javascript" src="js/EnemyLand1.js"></script>
+	<script type="text/javascript" src="js/Bullet.js"></script>
+	<script type="text/javascript" src="js/Bomb.js"></script>
+	<script type="text/javascript" src="js/Explosion.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
