--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>ts</title>
 	<script type="text/javascript" src="js/phaser.min.js"></script>
+	<script type="text/javascript" src="js/phaser.js"></script>
+	<script type="text/javascript" src="js/character.js"></script>
 	<script type="text/javascript" src="js/EnemyLand1.js"></script>
 	<script type="text/javascript" src="js/EnemyFly1.js"></script>
 	<script type="text/javascript" src="js/states/LoadingState.js"></script>
