--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<script type="text/javascript" src="js/states/LoadingState.js"></script>
 	<script type="text/javascript" src="js/states/TitleState.js"></script>
 	<script type="text/javascript" src="js/states/GameState.js"></script>
+	<script type="text/javascript" src="js/states/GameOverState.js"></script>
+	<script type="text/javascript" src="js/states/GameWinState.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
