--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/EnemyLand1.js"></script>
 	<script type="text/javascript" src="js/EnemyFly1.js"></script>
+	<script type="text/javascript" src="js/EnemyGrab.js"></script>
 	<script type="text/javascript" src="js/Bomb.js"></script>
 	<script type="text/javascript" src="js/Explosion.js"></script>
 	<script type="text/javascript" src="js/character.js"></script>
