--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="js/Bomb.js"></script>
 	<script type="text/javascript" src="js/Explosion.js"></script>
 	<script type="text/javascript" src="js/character.js"></script>
+	<script type="text/javascript" src="js/checkpoint.js"></script>
 	<script type="text/javascript" src="js/states/LoadingState.js"></script>
 	<script type="text/javascript" src="js/states/TitleState.js"></script>
 	<script type="text/javascript" src="js/states/GameState.js"></script>
