LevelCrowd.js created

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="js/states/GameOverState.js"></script>
 	<script type="text/javascript" src="js/states/GameWinState.js"></script>
 	<script type="text/javascript" src="js/states/Level1State.js"></script>
+	<script type="text/javascript" src="js/states/LevelCrowd.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
