--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<script type="text/javascript" src="js/EnemyLand1.js"></script>
 	<script type="text/javascript" src="js/EnemyFly1.js"></script>
 	<script type="text/javascript" src="js/EnemyGrab.js"></script>
+	<script type="text/javascript" src="js/EnemyTorrent.js"></script>
 	<script type="text/javascript" src="js/Bomb.js"></script>
+	<script type="text/javascript" src="js/Bullet.js"></script>
 	<script type="text/javascript" src="js/Explosion.js"></script>
 	<script type="text/javascript" src="js/character.js"></script>
 	<script type="text/javascript" src="js/checkpoint.js"></script>
