--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="js/states/GameWinState.js"></script>
 	<script type="text/javascript" src="js/states/Level1State.js"></script>
 	<script type="text/javascript" src="js/states/LevelCrowd.js"></script>
+	<script type="text/javascript" src="js/states/LevelHole.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
