--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/EnemyFly1.js"></script>
 	<script type="text/javascript" src="js/EnemyGrab.js"></script>
 	<script type="text/javascript" src="js/EnemyTorrent.js"></script>
+	<script type="text/javascript" src="js/EnemyHold.js"></script>
 	<script type="text/javascript" src="js/Bomb.js"></script>
 	<script type="text/javascript" src="js/Bullet.js"></script>
 	<script type="text/javascript" src="js/Explosion.js"></script>
