reamake level height

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<script type="text/javascript" src="js/states/Level1State.js"></script>
 	<script type="text/javascript" src="js/states/LevelCrowd.js"></script>
 	<script type="text/javascript" src="js/states/LevelHole.js"></script>
+	<script type="text/javascript" src="js/states/LevelHeight.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
