--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	<script type="text/javascript" src="js/checkpoint.js"></script>
 	<script type="text/javascript" src="js/states/LoadingState.js"></script>
 	<script type="text/javascript" src="js/states/TitleState.js"></script>
+	<script type="text/javascript" src="js/states/Start.js"></script>
 	<script type="text/javascript" src="js/states/GameState.js"></script>
-	<script type="text/javascript" src="js/states/GameOverState.js"></script>
+	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	<script type="text/javascript" src="js/states/GameWinState.js"></script>
 	<script type="text/javascript" src="js/states/Level1State.js"></script>
 	<script type="text/javascript" src="js/states/LevelCrowd.js"></script>
