--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<script type="text/javascript" src="js/states/LoadingState.js"></script>
 	<script type="text/javascript" src="js/states/TitleState.js"></script>
 	<script type="text/javascript" src="js/states/Start.js"></script>
+	<script type="text/javascript" src="js/states/HeightToCrowd.js"></script>
+	<script type="text/javascript" src="js/states/CrowdToHole.js"></script>
+	<script type="text/javascript" src="js/states/GameWin.js"></script>
 	<script type="text/javascript" src="js/states/GameState.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	<script type="text/javascript" src="js/states/GameWinState.js"></script>
