--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 	<script type="text/javascript" src="js/checkpoint.js"></script>
 	<script type="text/javascript" src="js/states/LoadingState.js"></script>
 	<script type="text/javascript" src="js/states/TitleState.js"></script>
+	<!-- <script type="text/javascript" src="js/states/Instruction.js"></script>
+	<script type="text/javascript" src="js/states/HeightToCrowd.js"></script>
+	<script type="text/javascript" src="js/states/CrowdToHole.js"></script>
+	<script type="text/javascript" src="js/states/crowdOverState.js"></script>
+	<script type="text/javascript" src="js/states/holeOverState.js"></script> -->
 	<script type="text/javascript" src="js/states/GameState.js"></script>
 	<script type="text/javascript" src="js/states/GameOverState.js"></script>
 	<script type="text/javascript" src="js/states/GameWinState.js"></script>
