delete useless stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ts</title>
+	<title>Looking for the light</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/EnemyLand1.js"></script>
 	<script type="text/javascript" src="js/EnemyGrab.js"></script>
@@ -28,6 +28,6 @@
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-<h1>test </h1>
+<h1>Last Light</h1>
 </body>
 </html>
